update for order color

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     repositories {
-        google()
-        jcenter()
+        maven { url 'http://maven.aliyun.com/repository/google' }
+        maven { url 'http://maven.aliyun.com/repository/jcenter' }
+        //google()
+        //jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
@@ -15,8 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven { url 'http://maven.aliyun.com/repository/google' }
+        maven { url 'http://maven.aliyun.com/repository/jcenter' }
+        //google()
+        //jcenter()
         maven { url "https://jitpack.io" }
     }
 }
